yc-sirius/nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: edu-goofy-allen
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      project: nginx
  template:
    metadata:
      labels:
        project: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.25.3
          ports:
          - containerPort: 80
          - containerPort: 443

        - name: django-container
          image: sdieul/task1_backend_main_django:latest
          ports:
            - containerPort: 443
