yc-sirius/ubuntu-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: temp-ubuntu-pod
  namespace: edu-goofy-allen
  labels:
    app: ubuntu
spec:
  containers:
    - name: ubuntu
      image: ubuntu:latest

      command: ["/bin/sh","-c"]
      args: [
        'apt-get update;
         apt install wget -y &&
         apt install postgresql-client -y &&
         mkdir -p ~/.postgresql &&
         wget "https://storage.yandexcloud.net/cloud-certs/CA.pem" --output-document ~/.postgresql/root.crt &&
         chmod 0600 ~/.postgresql/root.crt &&
         tail -f /dev/null'
      ]
