yc-sirius/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: edu-goofy-allen
  labels:
    app: nginx
spec:
  type: NodePort            # Configure NodePort so that external traffic can access services in k8S
  ports:
  - port: 443             # Service access port, a port for internal cluster access
    targetPort: 443          # Port defined in pod controller (port accessed by application)
    nodePort: 30351         # NodePort, the port accessed by external clients
  selector:
    name: nginx
