yc-sirius/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  namespace: edu-goofy-allen
spec:
  rules:
    - host: edu-goofy-allen.sirius-k8s.dvmn.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 443
